# HUFFMAN

./: CMakeLists.txt
gtest/: gtest_main.cc  huffman_tests.cpp
lib/: CMakeLists.txt  code.cpp  code_tree.cpp  data_compressor.cpp  data_decompressor.cpp
lib/h/: code.h  code_tree.h  data_compressor.h  data_decompressor.h  types_consts.h
test/: CMakeLists.txt  gtest-all.cc  gtest.h  huffman_tests.cpp
util/: CMakeLists.txt  file_compressor.cpp  file_decompressor.cpp  file_reader.cpp  file_writer.cpp  huffman_tests.cpp  main.cpp
util/h/: file_compressor.h  file_decompressor.h  file_reader.h  file_writer.h
